Trying Fix #8 for countdown timer not visible in deployment

--- a/css/style.css
+++ b/css/style.css
@@ -1465,10 +1465,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   } */
 
   #intro .intro-wrapper {
+    height: 100rem;
     flex-direction: column;
     gap: 3.125rem;
-    margin-top: -2rem;
-    padding-bottom: 150rem;
+    margin-top: -20rem;
+    margin-bottom: 20rem;
   }
 
   #intro .logo-container img {
